@@ -10,6 +10,7 @@
 	- removes libpmemblk tests and examples
 	- remove support for Travis bulids
 	- removes log/blk/btt support from pmempool
+	- removes log/blk support from pmemwrite
 	- ...
 
 Wed May 31 2023 Oksana Sałyk <oksana.salyk@intel.com>
